--- a/calculator/src/app/app.component.html
+++ b/calculator/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="conteiner">
   <div class="row">
     <div class="col-auto background-sidebar"><app-sidebar></app-sidebar></div>
-    <div class="col"></div>
+    <div class="col"><router-outlet></router-outlet></div>
   </div>
 </div>
