add option coverage modules

--- a/calculator/src/app/shared/sidebar/sidebar.component.html
+++ b/calculator/src/app/shared/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
         <button type="button" (click)="irCoberturaFuturo()" class="btn btn-outline-info">Cobertura Futuros</button>
     </li>
     <li>
-        <button type="button" class="btn btn-outline-info">Cobertura Opciones</button>
+        <button type="button" (click)="irCoberturaOpcion()" class="btn btn-outline-info">Cobertura Opciones</button>
     </li>
 </ul>
 </div>
